--- a/pre_cours/css_intro/task_2/style.css
+++ b/pre_cours/css_intro/task_2/style.css
@@ -1,11 +1,12 @@
 * {
     font-size: 24px;
-}
-
-.list {
-    color: orange;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .text {
     color: green;
+}
+
+.list {
+    color: orange;
 }
