--- a/pre_cours/selectors_basics/task_3/style.css
+++ b/pre_cours/selectors_basics/task_3/style.css
@@ -1,16 +1,15 @@
-
-* {
-    background: green;
+.super-important.highlighted {
+    background: red;
 }
 
-li {
+.highlighted, .company-data {
+    color: yellow;
+}
+
+li.user-data {
     font-size: 24px;
 }
 
-.page-header {
-    background: orange;
-}
-
-#best {
-    border: 2px solid red;
+span.user-data {
+    font-size: 10px;
 }
