--- a/pre_cours/selectors_basics/task_4/style.css
+++ b/pre_cours/selectors_basics/task_4/style.css
@@ -1,16 +1,23 @@
-
-* {
-    background: green;
+a[target="_blank"] {
+    color: green;
 }
 
-li {
+ul {
+    background: yellow;
+}
+
+header, footer {
+border: 3px dashed blue;
+}
+
+h1, h2, h3, h4 {
+    margin-left: 20px;
+}
+
+article.new {
     font-size: 24px;
 }
 
-.page-header {
-    background: orange;
-}
-
-#best {
-    border: 2px solid red;
+li.new{
+    background: red;
 }
