--- a/pre_cours/6_selectors_advanced/task_1/style.css
+++ b/pre_cours/6_selectors_advanced/task_1/style.css
@@ -1,27 +1,27 @@
 li {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 a[target="_blank"] {
-    border: 2px solid black;
+  border: 2px solid black;
 }
 
 a[href^="broken"] {
-    border: 2px solid red;
+  border: 2px solid red;
 }
 
 a[href$=".com"] {
-margin-left: 50px ;
+  margin-left: 50px;
 }
 
-a[leng*="en"] {
-    font-size: 10px;
+a[lang*="en"] {
+  font-size: 10px;
 }
 
 a[href*="www"] {
-    color: green;
+  color: green;
 }
 
 a[title*="popular"] {
-    font-size: 24px;
+  font-size: 24px;
 }
