--- a/pre_cours/6_selectors_advanced/task_3/style.css
+++ b/pre_cours/6_selectors_advanced/task_3/style.css
@@ -6,6 +6,10 @@ img[src$=".jpg"] {
     margin-left: 50px;
 }
 
+ul li[data-description~="even"] {
+    background: grey;
+}
+
 ul li[data-description*="even"] {
     font-size: 24px;
 }
