--- a/pre_cours/7_pseudo-selectors/task_2/style.css
+++ b/pre_cours/7_pseudo-selectors/task_2/style.css
@@ -12,6 +12,10 @@ ul > li:last-child > span {
     color: white;
 }
 
+li:nth-child(even) > span {
+    margin: 16px;
+}
+
 p:nth-child(1), p:nth-child(4){
     background: grey;
 }
