change text size

--- a/pre_cours/8_box_model/task_2/style.css
+++ b/pre_cours/8_box_model/task_2/style.css
@@ -8,5 +8,5 @@
     border-right: 20px solid chartreuse;
     border-bottom: 10px dashed burlywood;
     border-left: 20px dashed aqua;
-    /* font-size: 20px; */
+    font-size: 24px;
 }
