--- a/pre_cours/9_positioning_elements/task_1/style.css
+++ b/pre_cours/9_positioning_elements/task_1/style.css
@@ -54,12 +54,12 @@ div {
 
 .absolute-parent {
   position: absolute;
-  margin-bottom: 20px;
-  margin-right: 50px;
+  bottom: 20px;
+  right: 50px;
 }
 
 .fixed-parent {
   position: fixed;
-  margin-bottom: 20px;
-  margin-right: 50px;
+  bottom: 20px;
+  left: 30px;
 }
