--- a/pre_cours/9_positioning_elements/task_2/style.css
+++ b/pre_cours/9_positioning_elements/task_2/style.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 .square {
   width: 100px;
   height: 100px;
@@ -11,3 +15,21 @@ section {
 footer {
   height: 30px;
   border: 2px solid black;
+  clear: both;
+}
+
+.container {
+  position: relative;
+  width: 50%;
+  float: left;
+}
+
+.red {
+  background: red;
+  float: right;
+}
+
+.green{
+  background: green;
+  float: left;
+}
