--- a/pre_cours/9_positioning_elements/task_4/style.css
+++ b/pre_cours/9_positioning_elements/task_4/style.css
@@ -1,6 +1,31 @@
-.border {
-    padding: 50px; 
-    background: aqua; 
-    border: 3px solid  black;
-    margin-bottom: 50px;
-  }
+.header,
+.footer {
+  height: 50px;
+}
+
+.header {
+  background: yellow;
+}
+
+.footer {
+  background: green;
+  clear: both;
+}
+
+.content,
+.sidebar {
+  height: 500px;
+}
+
+.content {
+  float: left;
+  width: 80%;
+  background: pink;
+}
+
+.sidebar {
+  float: left;
+  right: 0; 
+  width: 20%;
+  background: grey;
+}
