--- a/pre_cours/9_positioning_elements/task_5/style.css
+++ b/pre_cours/9_positioning_elements/task_5/style.css
@@ -7,12 +7,20 @@
     height: 40px;
 }
 
+.nav-list {
+    margin: 0;
+    height: 40px;  
+}
+
+
 .nav-item {
     list-style: none;
     color: white;
     float: left;
-    margin: 12px 16px;
     height: 40px;
+    margin-right: 16px; 
+    margin-top: 11px; 
+    
 }
 
 .content {
