--- a/pre_cours/9_positioning_elements/task_5/style.css
+++ b/pre_cours/9_positioning_elements/task_5/style.css
@@ -19,9 +19,8 @@
 .nav-item {
   list-style: none;
   color: white;
-  height: 40px;
   margin-right: 16px;
-  padding: 11px;
+  padding-top: 11px;
 }
 
 .content {
