--- a/pre_cours/9_positioning_elements/task_5/style.css
+++ b/pre_cours/9_positioning_elements/task_5/style.css
@@ -19,6 +19,9 @@
 }
 
 .nav-item {
+  display: flex;
+  align-items: center;
+  height: 40px;
   list-style: none;
   color: white;
   margin-right: 16px;
