--- a/pre_cours/9_positioning_elements/task_5/style.css
+++ b/pre_cours/9_positioning_elements/task_5/style.css
@@ -15,7 +15,6 @@
 .nav-list {
   display: flex;
   align-items: center;
-  margin: 0;
 }
 
 .nav-item {
@@ -24,7 +23,7 @@
   height: 40px;
   list-style: none;
   color: white;
-  margin-right: 16px;
+  margin-left: 16px;
 }
 
 .content {
