--- a/pre_cours/9_positioning_elements/task_5/style.css
+++ b/pre_cours/9_positioning_elements/task_5/style.css
@@ -35,7 +35,7 @@
   height: 200px;
   width: 200px;
   background: aquamarine;
-  position: relative;
+  position: absolute;
   top: calc(50% - 100px);
   left: calc(50% - 100px);
 }
