--- a/pre_cours/10_flex/task_2/style.css
+++ b/pre_cours/10_flex/task_2/style.css
@@ -3,10 +3,11 @@
     margin: 8px;
     height: 100px;
     min-width: 100px;
+
     flex: 1;
   }
 
   .container {
       display: flex;
-
+      flex-wrap: wrap;
   }
