--- a/pre_cours/10_flex/task_3/style.css
+++ b/pre_cours/10_flex/task_3/style.css
@@ -24,7 +24,6 @@
 
 .nav__item {
   padding-left: 16px;
-
 }
 
 .content {
@@ -57,6 +56,8 @@
 }
 
 .sidebar__item {
+  display: flex;
+  align-items: center;
   height: 40px;
 }
 
