--- a/pre_cours/10_flex/task_4/style.css
+++ b/pre_cours/10_flex/task_4/style.css
@@ -1,6 +1,25 @@
-.border {
-    padding: 50px; 
-    background: aqua; 
-    border: 3px solid  black;
-    margin-bottom: 50px;
-  }
+body {
+  display: flex;
+}
+
+.block {
+  height: 300px;
+  flex: 1;
+}
+
+.block_red {
+  background: red;
+}
+.block_green {
+  background: green;
+}
+.block_blue {
+  background: blue;
+}
+.block_yellow {
+  background: yellow;
+}
+.block_black {
+  background: black;
+}
+
