--- a/pre_cours/11_display_visibility/task_3/style.css
+++ b/pre_cours/11_display_visibility/task_3/style.css
@@ -1,5 +1,38 @@
-.border {
-  padding: 50px; 
-  background: aqua; 
-  border: 3px solid  black;
+* {
+  box-sizing: border-box;
+}
+
+.dropdown {
+  position: relative;
+  margin: 16px;
+  background: darkgreen;
+  opacity: 0.8;
+  font-size: 16px;
+  color: white;
+  display: inline-block;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.menu-list {
+  display: none;
+  position: absolute;
+  top: 34px;
+  left: 0;
+  color: black;
+  list-style: none;
+  background: lightcyan;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  min-width: 120px;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-item {
+  padding: 16px;
+}
+
+.dropdown:hover .menu-list{
+  display: block;
 }
