--- a/pre_cours/11_display_visibility/task_4/style.css
+++ b/pre_cours/11_display_visibility/task_4/style.css
@@ -1,6 +1,20 @@
-.border {
-    padding: 50px; 
-    background: aqua; 
-    border: 3px solid  black;
-    margin-bottom: 50px;
-  }
+* {
+  box-sizing: border-box;
+}
+
+.text {
+  display: inline-block;
+  position: relative;
+  margin: 16px;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip {
+  position: absolute;
+  background: grey;
+  color: white;
+  border-radius: 4px;
+  padding: 8px;
+  bottom: -40px;
+  left: 0;
+}
