--- a/pre_cours/11_display_visibility/task_4/style.css
+++ b/pre_cours/11_display_visibility/task_4/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .text {
@@ -10,6 +12,7 @@
 }
 
 .tooltip {
+  display: none;
   position: absolute;
   background: grey;
   color: white;
@@ -17,4 +20,8 @@
   padding: 8px;
   bottom: -40px;
   left: 0;
+}
+
+.text:hover .tooltip {
+  display: block;
 }
