--- a/pre_cours/11_display_visibility/task_4/style.css
+++ b/pre_cours/11_display_visibility/task_4/style.css
@@ -9,7 +9,7 @@ body {
 .text {
   display: inline-block;
   position: relative;
-  margin: 16px;
+  margin: 15px 16px;
   border-bottom: 1px dotted black;
 }
 
