--- a/pre_cours/12_text-style/task_4/style.css
+++ b/pre_cours/12_text-style/task_4/style.css
@@ -1,6 +1,3 @@
-.border {
-    padding: 50px; 
-    background: aqua; 
-    border: 3px solid  black;
-    margin-bottom: 50px;
-  }
+* {
+  font-size: 12px;
+}
