--- a/pre_cours/12_text-style/task_1/style.css
+++ b/pre_cours/12_text-style/task_1/style.css
@@ -1,21 +1,31 @@
-body {
-    background: antiquewhite;
+* {
+    margin: 32px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
 }
 
-.size {
-    border: 8px solid black;
-    margin: 16px;
-    padding: 16px;
-    width: 512px;
-    height: 128px;
+h1 {
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 20px;
 }
 
-.content-box {
-    box-sizing: content-box;
-    background: aquamarine;
+p {
+    line-height: 28px;
 }
 
-.border-box {
-    box-sizing: border-box;
-    background: azure;
+span {
+    font-weight: bold;
+    letter-spacing: 3px;
+    font-size: 24px;
+    opacity: 80%;
+    text-decoration: underline;
+}
+
+a {
+    text-decoration: none;
+}
+
+em {
+    color: grey;
 }
