--- a/pre_cours/12_text-style/task_1/style.css
+++ b/pre_cours/12_text-style/task_1/style.css
@@ -1,10 +1,14 @@
-section {
-    margin: 32px;
-    font-family: 'Roboto', sans-serif;
+html {
+    font-family: Roboto, sans-serif;
     font-size: 18px;
 }
 
+section {
+    margin: 32px;
+}
+
 h1 {
+    font-weight: 900;
     text-align: center;
     text-transform: uppercase;
     word-spacing: 20px;
@@ -14,8 +18,8 @@ p {
     line-height: 28px;
 }
 
-span {
-    font-weight: bold;
+.technology {
+    font-weight: 900;
     letter-spacing: 3px;
     font-size: 24px;
     opacity: 80%;
@@ -26,6 +30,6 @@ a {
     text-decoration: none;
 }
 
-em {
+.translaton {
     color: grey;
 }
